feat(upload): 上传视频文件添加自定义缩略图支持
